--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
     <div class="container">
         <h1>Pense Bem</h1>
         <div class="display">
-            <span class="code">021->1:</span>
+            <span id="numCode" class="code">041->1:</span>
         </div>
-        <div class="attempts">Tentativa 1 de 3</div>
+        <div id = 'numTentativas' class="attempts">Tentativa 3 de 3</div>
         <div class="buttons">
-            <button class="btn A">A</button>
-            <button class="btn B">B</button>
-            <button class="btn C">C</button>
-            <button class="btn D">D</button>
+            <button id='VERMELHO' class="btn A">A</button>
+            <button id='AMARELO' class="btn B">B</button>
+            <button id='AZUL' class="btn C">C</button>
+            <button id='VERDE' class="btn D">D</button>
         </div>
         <button class="reset">Reiniciar Jogo</button>
+
+
+        <audio id="songRight" src="./Songs/song-rightanswer.mp3"></audio>
+        <audio id="songWrong" src="./Songs/song-wronganswer.mp3"></audio>
+        <audio id="songNext" src="./Songs/song-next.mp3"></audio>
+        <script src="./script.js"></script>
     </div>
 </body>
 </html>
