--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pense Bem</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./Styles/estilo.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <audio id="songRight" src="./Songs/song-rightanswer.mp3"></audio>
         <audio id="songWrong" src="./Songs/song-wronganswer.mp3"></audio>
         <audio id="songNext" src="./Songs/song-next.mp3"></audio>
-        <script src="./script.js"></script>
+        <script src="./Scripts/script.js"></script>
     </div>
 </body>
 </html>
