adicionado o gabarito do programa 1

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div class="display">
             <span id="numCode" class="code">041->1:</span>
         </div>
-        <div id = 'numTentativas' class="attempts">Tentativa 3 de 3</div>
+        <div id = 'numTentativas' class="attempts">Tentativa 1 de 3</div>
         <div class="buttons">
             <button id='VERMELHO' class="btn A">A</button>
             <button id='AMARELO' class="btn B">B</button>
             <button id='AZUL' class="btn C">C</button>
             <button id='VERDE' class="btn D">D</button>
         </div>
-        <button class="reset">Reiniciar Jogo</button>
+        <button class="reset" onclick="reiniciar()">Reiniciar Jogo</button>
 
 
         <audio id="songRight" src="./Songs/song-rightanswer.mp3"></audio>
