atualizado html e css

--- a/Trabalho-de-Web-II-main/index.html
+++ b/Trabalho-de-Web-II-main/index.html
@@ -26,7 +26,7 @@
                 <button id='AZUL' class="btn C">C</button>
                 <button id='VERDE' class="btn D">D</button>
             </div>
-            <button class="reset">Reiniciar Jogo</button>
+            <button class="reset" onclick="reiniciar()">Reiniciar Jogo</button>
 
             <audio id="songRight" src="./Songs/song-rightanswer.mp3"></audio>
             <audio id="songWrong" src="./Songs/song-wronganswer.mp3"></audio>
