adicionado o script para trocar programa (parcialmente)

--- a/Trabalho-de-Web-II-main/index.html
+++ b/Trabalho-de-Web-II-main/index.html
@@ -36,11 +36,11 @@
         <div class="container-verde">
             <p>Escolha um dos 5 Gabaritos</p>
             <div class="botoes-gabaritos">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
+                <button class="gabarito-btn">1</button>
+                <button class="gabarito-btn">2</button>
+                <button class="gabarito-btn">3</button>
+                <button class="gabarito-btn">4</button>
+                <button class="gabarito-btn">5</button>
             </div>
         </div>
     </div>
