--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </div>
         
         <div class="container-verde">
-            <p>Escolha um dos 5 Gabaritos</p>
+            <p>Escolha um dos 5 Programas</p>
             <div class="botoes-gabaritos">
-                <button class="gabarito-btn">1</button>
-                <button class="gabarito-btn">2</button>
-                <button class="gabarito-btn">3</button>
-                <button class="gabarito-btn">4</button>
-                <button class="gabarito-btn">5</button>
+                <button class="gabarito-btn">041</button>
+                <button class="gabarito-btn">042</button>
+                <button class="gabarito-btn">043</button>
+                <button class="gabarito-btn">044</button>
+                <button class="gabarito-btn">045</button>
             </div>
         </div>
     </div>
